fix cookie modal styling on mobile

--- a/app/webpacker/styles/button.scss
+++ b/app/webpacker/styles/button.scss
@@ -3,7 +3,6 @@
     font-size: 19px;
     font-weight: bold;
     letter-spacing: 0px;
-    text-align: center;
     box-sizing: border-box;
     display: inline-block;
     padding: 18px 20px 16px 20px;
